Revise README for VeriCrop Mini Demo project
Updated README to provide a comprehensive overview of the VeriCrop Mini Demo project, including setup instructions, common issues, and next steps.